// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for App Container snapshot 1`] = `
<div
  className="sc-bdVaJa frGBwh"
/>
`;

exports[`Test suite for App Image snapshot 1`] = `
<img
  className="sc-bwzfXH fkGgTe"
/>
`;

exports[`Test suite for App Logo snapshot 1`] = `
<img
  className="sc-bxivhb drsGEi"
/>
`;

exports[`Test suite for App LogoBanner snapshot 1`] = `
<span
  className="sc-htpNat XlrGQ"
/>
`;

exports[`Test suite for App Text snapshot 1`] = `
<span
  className="sc-EHOje gjLLVX"
/>
`;

exports[`Test suite for App TitleText snapshot 1`] = `
<span
  className="sc-ifAKCX IymKh"
/>
`;
